--- a/models/nrlmsise00/Makefile
+++ b/models/nrlmsise00/Makefile
@@ -7,7 +7,7 @@ ifeq ($(sys),SunOS)
 FFLAGS = -KPIC -dalign -mt -silent -e
 FC=f90
 else
-FFLAGS = -O4 -fPIC -NC198 -c -static -finit-local-zero
+FFLAGS = -O3 -fPIC -c -static -finit-local-zero
 endif
 
 A=	.a
