--- a/models/nrlmsise00/Makefile
+++ b/models/nrlmsise00/Makefile
@@ -2,23 +2,25 @@ L=	../../lib/
 MLIST=	nrlmsise00.f
 N=	libmsis
 
-sys=$(shell uname -s)
-ifeq ($(sys),SunOS)
-FFLAGS = -xO3 -KPIC -dalign -mt -silent -e
-FC=f90
-else
-FFLAGS = -O3 -fPIC -c -static -finit-local-zero
-endif
-
 A=	.a
 S=	.so
 ML=	$L$N
 
-libiri:
+sys=$(shell uname -s)
+ifeq ($(sys),SunOS)
+FFLAGS = -xO3 -KPIC -dalign -mt -silent -e
+FC=f90
+LDFLAGS= -dy -G -h $N$S -z text
+else
+FFLAGS = -O3 -fPIC -c -static -finit-local-zero
+LDFLAGS= -shared
+endif
+
+libmsis:
 	@$(MAKE) clean
 	$(COMPILE.f) $(MLIST)
 	$(RM) $(ML)$A $(ML)$S
-	$(LD) -o $(ML)$S -dy -G -h $N$S -z text *.o
+	$(LD) -o $(ML)$S $(LDFLAGS) *.o
 	$(AR) cr $(ML)$A *.o
 	@$(MAKE) clean
 
