--- a/models/iri2001/Makefile
+++ b/models/iri2001/Makefile
@@ -2,23 +2,25 @@ L=	../../lib/
 MLIST=	irisub.f irifun.f iritec.f iridreg.f igrf.f cira.f
 N=	libiri
 
+A=	.a
+S=	.so
+ML=	$L$N
+
 sys=$(shell uname -s)
 ifeq ($(sys),SunOS)
 FFLAGS = -xO3 -KPIC -dalign -mt -silent -e
 FC=f90
+LDFLAGS= -dy -G -h $N$S -z text
 else
 FFLAGS = -O3 -fPIC -c -static -finit-local-zero -ffixed-line-length-132
+LDFLAGS= -shared
 endif
-
-A=	.a
-S=	.so
-ML=	$L$N
 
 libiri:
 	@$(MAKE) clean
 	$(COMPILE.f) $(MLIST)
 	$(RM) $(ML)$A $(ML)$S
-	$(LD) -o $(ML)$S -dy -G -h $N$S -z text *.o
+	$(LD) -o $(ML)$S $(LDFLAGS) *.o
 	$(AR) cr $(ML)$A *.o
 	@$(MAKE) clean
 
