Can run multiple matlab versions

--- a/mexsources/Makefile
+++ b/mexsources/Makefile
@@ -2,6 +2,12 @@ sys=$(shell uname -s)
 ifndef MATLAB
 MATLAB:=	/opt/matlab7
 endif
+ifndef MEX
+MEX:=	mex
+endif
+ifndef MEXDIR
+MEXD:=	mex7
+endif
 ifeq ($(sys),SunOS)
 #Solaris:
 CFLAGS=-fast -mt -KPIC -DANSI_C -I$(MATLAB)/extern/include
@@ -21,7 +27,6 @@ M=	$(PWD)/../lib
 IRILIB=	-L$M -liri
 MSISLIB=	-L$M -lmsis
 GUPLIB=	-L$M -lguisdap
-mex_Directory = ../mex7
 ifeq ($(th),1)
 CFLAGS:=	$(CFLAGS) -DGUPTHREAD
 GUPLIB:=	$(GUPLIB) -lpthread
@@ -30,13 +35,13 @@ endif
 all: iri msis lib mex install
 
 iri:
-	mex $(MEXOPTS) iri.f $(IRILIB)
+	$(MEX) $(MEXOPTS) iri.f $(IRILIB)
 
 geomag:
-	mex $(MEXOPTS) geomag.f $(IRILIB)
+	$(MEX) $(MEXOPTS) geomag.f $(IRILIB)
 
 msis:
-	mex $(MEXOPTS) msis.f $(MSISLIB)
+	$(MEX) $(MEXOPTS) msis.f $(MSISLIB)
 
 lib:
 	$(COMPILE.c) mrqmndiag_worker.c dirthe_worker.c GULIPS_addm_worker.c GULIPS_cov_worker.c GULIPS_invR_worker.c GULIPS_mul_worker.c spec_worker.c transf_worker.c addr_covar_worker.c
@@ -45,11 +50,11 @@ lib:
 	$(RM) *.o
 
 mex:
-	mex -DANSI_C mrqmndiag.c $(GUPLIB)
-	mex -DANSI_C dirthe.c $(GUPLIB)
-	mex -DANSI_C spec.c $(GUPLIB)
-	mex -DANSI_C transf.c $(GUPLIB)
-	mex -DANSI_C addr_covar.c $(GUPLIB)
+	$(MEX) -DANSI_C mrqmndiag.c $(GUPLIB)
+	$(MEX) -DANSI_C dirthe.c $(GUPLIB)
+	$(MEX) -DANSI_C spec.c $(GUPLIB)
+	$(MEX) -DANSI_C transf.c $(GUPLIB)
+	$(MEX) -DANSI_C addr_covar.c $(GUPLIB)
 
 install:
-	mv *.mex* ${mex_Directory}
+	mv *.mex* ../${MEXD}
