--- a/models/nrlmsise00/Makefile
+++ b/models/nrlmsise00/Makefile
@@ -12,7 +12,13 @@ FFLAGS = -xO3 -KPIC -dalign -mt -silent -e
 FC=f90
 LDFLAGS= -dy -G -h $N$S -z text
 else
+ifeq ($(FC),f95) 
+FC=gfortran
+FFLAGS = -O3 -fPIC -c -static
+else
+FC=g77
 FFLAGS = -O3 -fPIC -c -static -finit-local-zero
+endif
 LDFLAGS= -shared
 endif
 
