--- a/mexsources/Makefile
+++ b/mexsources/Makefile
@@ -5,11 +5,11 @@ endif
 ifndef MEXD
 MEXD:=	mex7
 endif
+ifndef MATLAB
+MATLAB=$(subst MATLAB=,,$(shell matlab -e | grep MATLAB= ))
+endif
 ifeq ($(sys),SunOS)
 #Solaris:
-ifndef MATLAB
-MATLAB:=	/opt/matlab7
-endif
 CFLAGS=-fast -mt -KPIC -DANSI_C -I$(MATLAB)/extern/include
 MEXOPTS=-f $(MATLAB)/bin/f90opts.sh
 LDFLAGS= -dy -G -h libguisdap.so -z text
