--- a/models/iri2001/Makefile
+++ b/models/iri2001/Makefile
@@ -12,8 +12,7 @@ FFLAGS = -xO3 -KPIC -dalign -mt -silent -e -xarch=v9a
 FC=f90
 LDFLAGS= -dy -G -h $N$S -z text
 else
-ifeq ($(FC),f95)
-FC=gfortran
+ifeq ($(FC),gfortran)
 FFLAGS = -O3 -fPIC -c -static -ffixed-line-length-132 -fexceptions
 else
 FC=g77
