--- a/models/nrlmsise00/Makefile
+++ b/models/nrlmsise00/Makefile
@@ -13,7 +13,7 @@ FC=f90
 LDFLAGS= -dy -G -h $N$S -z text
 else
 ifeq ($(FC),gfortran) 
-FFLAGS = -O3 -fPIC -c -static
+FFLAGS = -O3 -fPIC -c -fno-automatic
 else
 FC=g77
 FFLAGS = -O3 -fPIC -c -static -finit-local-zero
