--- a/models/onera/Makefile
+++ b/models/onera/Makefile
@@ -114,6 +114,7 @@ LIBNAME_linux64_gnu32=linux_x86
 FOPTIONS_SHARED_linux64_gnu64=-mno-align-double -fno-second-underscore -w -m64
 FOPTIONS_NONSHARED_linux64_gnu64=-c -mno-align-double -w -m64
 FC_linux64_gnu64=g77
+FC_linux64_gnu64=gfortran-4.3
 PIC_linux64_gnu64=-fPIC
 LDOPTIONS_linux64_gnu64=-shared
 WRAPPER_linux64_gnu64=64
