Use g95 for irilib due to strange compability error preventing format statements

--- a/models/iri2007/Makefile
+++ b/models/iri2007/Makefile
@@ -1,6 +1,8 @@
 L=	../../lib/
 MLIST=	irisub.f irifun.f iritec.f iridreg.f igrf.f cira.f
 N=	libiri
+ALIB=
+EXF=
 
 A=	.a
 S=	.so
@@ -10,29 +12,32 @@ sys=$(shell uname -s)
 ifeq ($(sys),SunOS)
 ifeq ($(bit),64)
 ML=	$Lsparcv9/$N
-#FFLAGS = -xO3 -KPIC -dalign -mt -silent -e -xarch=v9a
-FFLAGS = -xO3 -KPIC -dalign -mt -silent -e -m64 -xarch=sparcvis
-else
-FFLAGS = -xO3 -KPIC -dalign -mt -silent -e
+#FFLAGS =-xarch=v9a
+EXF =-m64 -xarch=sparcvis
 endif
+FFLAGS =-xO3 -KPIC -dalign -mt -silent -e $(EXF)
 FC=f90
 LDFLAGS= -dy -G -h $N$S -z text
 else
 ifeq ($(FC),g77)
-FFLAGS = -O3 -fPIC -c -static -finit-local-zero -ffixed-line-length-132
+EXF =-static -finit-local-zero -ffixed-line-length-132
+else ifeq ($(FC),g95)
+EXF =-fno-second-underscore
+ALIB=/usr/lib/g95/i586-mandriva-linux-gnu/4.0.4/libf95.a
 else
 FC=gfortran
-FFLAGS = -O3 -fPIC -c -fno-automatic
+EXF =-fno-automatic
 endif
-LDFLAGS= -shared
+FFLAGS =-O3 -fPIC -c $(EXF)
+LDFLAGS=-shared
 endif
 
 libiri:
 	@$(MAKE) clean
 	$(COMPILE.f) $(MLIST)
 	$(RM) $(ML)$A $(ML)$S
-	$(LD) -o $(ML)$S $(LDFLAGS) *.o
-	$(AR) cr $(ML)$A *.o
+	$(LD) -o $(ML)$S $(LDFLAGS) *.o $(ALIB)
+	$(AR) cr $(ML)$A *.o $(ALIB)
 	@$(MAKE) clean
 
 clean:
