--- a/models/nrlmsise00/Makefile
+++ b/models/nrlmsise00/Makefile
@@ -20,6 +20,7 @@ LDFLAGS= -dy -G -h $N$S -z text
 else
 ifeq ($(FC),gfortran) 
 FFLAGS = -O3 -fPIC -c -fno-automatic
+#FC=gfortran-4.4
 else
 FC=g77
 FFLAGS = -O3 -fPIC -c -static -finit-local-zero
