--- a/models/iri2012/Makefile
+++ b/models/iri2012/Makefile
@@ -25,7 +25,7 @@ elseifeq ($(FC),g95)
 EXF =-fno-second-underscore -fstatic -fmultiple-save
 ALIB=/usr/lib/g95/i586-mandriva-linux-gnu/4.0.4/libf95.a /usr/lib/libc_nonshared.a
 else
-FC=gfortran
+FC=gfortran-4.4
 EXF = -fno-automatic -fno-align-commons
 endif
 FFLAGS =-O2 -fPIC -c $(EXF)
