--- a/models/nrlmsise00/Makefile
+++ b/models/nrlmsise00/Makefile
@@ -18,12 +18,12 @@ endif
 FC=f90
 LDFLAGS= -dy -G -h $N$S -z text
 else
-ifeq ($(FC),gfortran) 
-FFLAGS = -O3 -fPIC -c -fno-automatic
-FC=gfortran-4.8
-else
+ifeq ($(FC),g77) 
 FC=g77
 FFLAGS = -O3 -fPIC -c -static -finit-local-zero
+else
+FFLAGS = -O3 -fPIC -c -fno-automatic
+FC=gfortran-5
 endif
 LDFLAGS= -shared
 endif
