--- a/mexsources/Makefile
+++ b/mexsources/Makefile
@@ -28,8 +28,8 @@ else
 CFLAGS=-O3 -fPIC -ansi -march=native -D_GNU_SOURCE -pthread -DANSI_C -I$(MATLAB)/extern/include
 PLFLAGS= -Wall -g -O4 -march=native -shared -fPIC
 
-MEXOPTS=FC=gfortran-5 GCC=gcc-5 -compatibleArrayDims
-CC=gcc-5
+MEXOPTS=FC=gfortran-4.9 GCC=gcc-4.9 -compatibleArrayDims
+CC=gcc-4.9
 LDFLAGS= -shared
 endif
 
@@ -74,4 +74,4 @@ mex:
 	$(MEX) $(MEXOPTS) -DANSI_C addr_covar.c $(GUPLIB)
 
 install:
-	mv *.mex* ../${MEXD}
+	mv *.mex* plwin.h ../${MEXD}
