--- a/mexsources/Makefile
+++ b/mexsources/Makefile
@@ -28,8 +28,8 @@ else
 CFLAGS=-O3 -fPIC -ansi -march=native -D_GNU_SOURCE -pthread -DANSI_C -I$(MATLAB)/extern/include
 PLFLAGS= -Wall -g -O4 -march=native -shared -fPIC
 
-MEXOPTS=FC=gfortran-4.9 GCC=gcc-4.9 -compatibleArrayDims
-CC=gcc-4.9
+MEXOPTS=FC=gfortran GCC=gcc -compatibleArrayDims
+CC=gcc
 LDFLAGS= -shared
 endif
 
