--- a/models/iri2016/Makefile
+++ b/models/iri2016/Makefile
@@ -3,6 +3,7 @@ MLIST=	cira.for igrf.f iridreg.for iriflip.for irifun.f irisub.f iritec.for
 N=	libiri
 ALIB=
 EXF=
+GFORT=	gfortran-5
 
 A=	.a
 S=	.so
@@ -25,7 +26,7 @@ else
   EXF =-fno-second-underscore -fstatic -fmultiple-save
   ALIB=/usr/lib/g95/i586-mandriva-linux-gnu/4.0.4/libf95.a /usr/lib/libc_nonshared.a
  else
-  FC=gfortran
+  FC=$(GFORT)
   EXF = -fno-automatic -fno-align-commons
  endif
  FFLAGS =-O2 -fPIC -c $(EXF)
