Added unit to R2H and H2R calcs

--- a/models/iri2016/Makefile
+++ b/models/iri2016/Makefile
@@ -38,7 +38,7 @@ libiri:
 	$(COMPILE.f) $(MLIST)
 	$(RM) $(ML)$A $(ML)$S
 	$(LD) -o $(ML)$S $(LDFLAGS) *.o $(ALIB)
-	$(AR) cr $(ML)$A *.o $(ALIB)
+	#$(AR) cr $(ML)$A *.o $(ALIB)
 	@$(MAKE) clean
 
 clean:
