--- a/models/irbem-code/Makefile
+++ b/models/irbem-code/Makefile
@@ -16,7 +16,7 @@
 #    You should have received a copy of the GNU Lesser General Public License
 #    along with IRBEM-LIB.  If not, see <http://www.gnu.org/licenses/>.
 #
-SHELL=/bin/sh
+SHELL=/bin/bash
 NULL=true
 
 #------------------------------------------------------------------------------
