--- a/models/irbem-code/CMakeLists.txt
+++ b/models/irbem-code/CMakeLists.txt
@@ -12,4 +12,4 @@ COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/TAIL_PAR.zip ${CMAKE_CURRENT_SOURCE_DIR}/
 COMMAND TS07_DATA_PATH=${SHARE_DIRECTORY}/TS07 ${CMAKE_CURRENT_SOURCE_DIR}/setup_ts07d_files.sh
 )
 
-file(INSTALL matlab/ DESTINATION ${SHARE_DIRECTORY}/matlab/irbem)
+file(INSTALL matlab/ DESTINATION ${CMAKE_BINARY_DIR}/matlab/irbem)
