--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
-cmake_minimum_required(VERSION 3.5)
-set(CMAKE_C_COMPILER gcc-5)
-set(CMAKE_Fortran_COMPILER gfortran-5)
+cmake_minimum_required(VERSION 3.10)
+set(CMAKE_C_COMPILER gcc-6)
+set(CMAKE_Fortran_COMPILER gfortran-6)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(SHARE_DIRECTORY ${CMAKE_BINARY_DIR}/share)
-add_compile_options(-O4 -m64)
+#add_compile_options(-O4 -m64)
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
 #set(SHARE_DIRECTORY ${CMAKE_BINARY_DIR}/../share)
-#add_compile_options(-O4 -march=native)
+add_compile_options(-O4 -march=native)
 enable_language(Fortran)
-string(APPEND CMAKE_Fortran_FLAGS " -fno-automatic -fno-align-commons")
+string(APPEND CMAKE_Fortran_FLAGS " -fno-automatic -fno-align-commons -std=legacy")
 
 project(guisdap)
 
