--- a/models/iri2016/CMakeLists.txt
+++ b/models/iri2016/CMakeLists.txt
@@ -6,7 +6,7 @@ file(GLOB IRI_SRC "*.f*")
 add_library(iri SHARED)
 target_sources(iri PRIVATE ${IRI_SRC})
 
-file(GLOB PUBLIC_ASC "*.asc")
-#file(GLOB PUBLIC_DAT "*.dat")
-file(GLOB PUBLIC_DAT "[di]grf*.dat" "mcsat*.dat")
-file(INSTALL ${PUBLIC_ASC} ${PUBLIC_DAT} DESTINATION ${SHARE_DIRECTORY}/iri)
+#file(GLOB PUBLIC_ASC "*.asc")
+#file(GLOB PUBLIC_DAT "[di]grf*.dat" "mcsat*.dat")
+file(GLOB PUBLIC_DAT "mcsat*.dat")
+file(INSTALL ${PUBLIC_DAT} DESTINATION ${SHARE_DIRECTORY}/iri)
