--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(SHARE_DIRECTORY ${CMAKE_BINARY_DIR}/share)
 set(PKG "$ENV{PKG}")
 if(PKG)
- add_compile_options(-O4 -m64)
+ add_compile_options(-O4 -cpp -ffast-math -m64)
 else()
- add_compile_options(-O4 -march=native)
+ add_compile_options(-O4 -cpp -ffast-math -march=native)
 endif()
 enable_language(Fortran)
 string(APPEND CMAKE_Fortran_FLAGS " -fno-automatic -fno-align-commons -std=legacy")
@@ -23,7 +23,7 @@ string(APPEND CMAKE_Fortran_FLAGS " -fno-automatic -fno-align-commons -std=legac
 project(guisdap)
 
 add_subdirectory(models/iri2016)
-add_subdirectory(models/nrlmsise00)
+add_subdirectory(models/nrlmsis2.0)
 add_subdirectory(models/irbem-code/source)
 add_subdirectory(models/irbem-code)
 add_subdirectory(source)
