--- a/models/irbem/CMakeLists.txt
+++ b/models/irbem/CMakeLists.txt
@@ -9,7 +9,7 @@ add_custom_command(
 OUTPUT ${SHARE_DIRECTORY}/TS07
 #WORKING_DIRECTORY ${SHARE_DIRECTORY}/TS07
 COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/TAIL_PAR.zip ${CMAKE_CURRENT_SOURCE_DIR}/all.tgz .
-###COMMAND TS07_DATA_PATH=${SHARE_DIRECTORY}/TS07 ${CMAKE_CURRENT_SOURCE_DIR}/setup_ts07d_files.sh
+COMMAND TS07_DATA_PATH=${SHARE_DIRECTORY}/TS07 ${CMAKE_CURRENT_SOURCE_DIR}/setup_ts07d_files.sh
 )
 
 file(INSTALL matlab/ DESTINATION ${CMAKE_BINARY_DIR}/irbem)
