--- a/models/irbem/source/CMakeLists.txt
+++ b/models/irbem/source/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(irbem)
 
-string(APPEND CMAKE_Fortran_FLAGS " -mno-align-double -fno-second-underscore -w")
+#string(APPEND CMAKE_Fortran_FLAGS " -mno-align-double -fno-second-underscore -w")
+string(APPEND CMAKE_Fortran_FLAGS " -fno-second-underscore -w")
 
 #file(GLOB IRBEM_SRC "../myOwnMagField*.f *.f*")
 file(GLOB IRBEM_SRC "*.[fc]*")
